# os-net-descriptor-passing

./: CMakeLists.txt
client/: client.cpp  client.h
mains/: client_main.cpp  server_main.cpp
server/: server.cpp  server.h
utils/: utils.hpp
